<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_find_replace_black_24dp"
        app:showAsAction="ifRoom"
        android:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_alpha_sort"
        android:icon="@drawable/ic_text_format_24dp"
        android:title="@string/action_alpha_sort"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_date_sort"
        android:icon="@drawable/ic_unfold_more_24dp"
        android:title="@string/action_date_sort"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_fav_sort"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="Show favorites"
        app:showAsAction="collapseActionView" />


</menu>